[chromium] Fix plumbing for differentiating between clipboard/selection pastes. https://bugs.webkit.org/show_bug.cgi?id=72056

Reviewed by tony@chromium.org.

Source/WebCore:

Add a buffer parameter when retrieving the clipboard sequence number and fix several call
sites that incorrectly assume use of the standard buffer in pastes.

* platform/chromium/ChromiumDataObject.cpp:
(WebCore::ChromiumDataObject::types):
(WebCore::ChromiumDataObject::getData):
(WebCore::ChromiumDataObject::containsFilenames):
* platform/chromium/ChromiumDataObject.h:
* platform/chromium/ClipboardChromium.cpp:
(WebCore::ClipboardChromium::ClipboardChromium):
(WebCore::ClipboardChromium::getData):
(WebCore::ClipboardChromium::platformClipboardChanged):
* platform/chromium/ClipboardUtilitiesChromium.cpp:
(WebCore::currentPasteboardBuffer):
* platform/chromium/ClipboardUtilitiesChromium.h:
* platform/chromium/DataTransferItemChromium.cpp:
(WebCore::DataTransferItemChromium::getAsString):
* platform/chromium/PlatformSupport.h:

Source/WebKit/chromium:

Add a buffer parameter when retrieving the clipboard sequence number.

* public/WebClipboard.h:
(WebKit::WebClipboard::sequenceNumber):
* src/PlatformSupport.cpp:
(WebCore::PlatformSupport::clipboardSequenceNumber):

Canonical link: https://commits.webkit.org/89518@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101031 268f45cc-cd09-0410-ab3c-d52691b4dbfc